src/objects/ACCL__Product_Assortment_Template__c.object
<CustomObject>
    <description>Template for product assortments. Controls the behaviour of the instances of this template, for example if a business partner must be specified (AccountMultiplicity). This table is sales organization dependent.</description>
    <fields>
        <fullName>ACCL__Account_Multiplicity__c</fullName>
        <description>How many business partners can be assigned to an assortment of this template.</description>
        <label>Customer Multiplicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>n</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_IsBannerList__c</fullName>
        <defaultValue>true</defaultValue>
        <description></description>
        <label>Is Banner List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsStoreList__c</fullName>
        <defaultValue>true</defaultValue>
        <description></description>
        <label>Is Store List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean to identify if the Product Assortment template is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_For_APL_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines the Product Assortment to be considered in Account Product list.</description>
        <label>Consider For APL Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Level__c</fullName>
        <description>Describes the product level.</description>
        <label>Product Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Flavor</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the product assortment template belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_IsBranchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Branch List</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Assortment Template</label>
    <listViews>
        <fullName>ACCL__Product_Assortment_Templates</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Account_Multiplicity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>Product Assortment Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Assortment Templates</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Assortment_List</fullName>
        <active>true</active>
        <description>Listed Products used for presetting the Item list during the Order taking</description>
        <label>Assortment List</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Customer_Selling_Assortments</fullName>
        <active>true</active>
        <description>Customer specific Product set used for presetting the Item list during the Order taking</description>
        <label>Customer Selling Assortments</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Planning_Assortment_List</fullName>
        <active>true</active>
        <description>Listed planning products used for restricting the products during promotion planning</description>
        <label>Planning Assortment List</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Sales_Document_Assortments</fullName>
        <active>true</active>
        <description>Sales Document Template specific Product list</description>
        <label>Sales Document Assortments</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org can&apos;t be edited after Product Assortment Template creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Product Assortment Template creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_Planning_Assort_List_Product_Level</fullName>
        <active>true</active>
        <description>Checks if Product Assortment List record type has a product level different from product.</description>
        <errorConditionFormula>AND (RecordType.DeveloperName =  &apos;Planning_Assortment_List&apos;, TEXT(ACCL__Product_Level__c) &lt;&gt; &apos;Product&apos;)</errorConditionFormula>
        <errorDisplayField>ACCL__Product_Level__c</errorDisplayField>
        <errorMessage>Product Level must be &apos;Product&apos; for product assortment templates with record type &apos;Planning Assortment List&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Product_Level_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName &lt;&gt; &apos;Planning_Assortment_List&apos;, ISCHANGED(ACCL__Product_Level__c))</errorConditionFormula>
        <errorMessage>The Product Level can&apos;t be edited after Product Assortment Template creation.</errorMessage>
    </validationRules>
</CustomObject>